--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color:grey;">
     <script src="p5.min.js"></script>
-    <script src="promise.js"></script>
-   
+    <script src="Promise.js"></script>
+    <script src="Promise_2.js"></script>
 </body>
 </html>
