--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body style="background-color:grey;">
     <script src="p5.min.js"></script>
     <script src="Promise.js"></script>
+    <h1 id="hi"></h1>
+    <img src="" id="imagen" alt="">
     <script src="Promise_2.js"></script>
 </body>
 </html>
